--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -763,9 +763,11 @@ PBOX:
 		Prerequisites: tent, ~structures.allies, ~techlevel.low
 		Description: Static defense with a fireport for\na garrisoned soldier.\nCan detect cloaked units.\n\n  Strong vs Infantry, Light armor\n  Weak vs Tanks, Aircraft
 	Valued:
-		Cost: 600
+		Cost: 500
 	CustomSellValue:
 		Value: 400
+    Sellable:
+        RefundPercent: 100
 	Health:
 		HP: 40000
 	Armor:
@@ -819,9 +821,11 @@ HBOX:
 		Prerequisites: dome, ~structures.allies, ~techlevel.medium
 		Description: Camouflaged static defense with a fireport\nfor a garrisoned soldier.\nCan detect cloaked units.\n\n  Strong vs Infantry, Light armor\n  Weak vs Tanks, Aircraft
 	Valued:
-		Cost: 750
+		Cost: 700
 	CustomSellValue:
-		Value: 550
+		Value: 600
+    Sellable:
+        RefundPercent: 100
 	Health:
 		HP: 40000
 	Armor:
@@ -880,7 +884,7 @@ GUN:
 	Valued:
 		Cost: 800
 	Tooltip:
-		Name: Turret
+		Name: Gun Turret
 	Building:
 	Health:
 		HP: 40000
@@ -1566,7 +1570,7 @@ AFLD:
 		Prerequisites: anypower, barracks, ~structures.soviet, ~techlevel.medium, ~!structures.ukraine, ~!structures.belarus
 		Description: Produces and reloads aircraft.\n\n  Special Ability: Spy Plane\n  Special Ability: Paratroopers
 	Valued:
-		Cost: 500
+		Cost: 600
 	Tooltip:
 		Name: Airfield
 	Selectable:
@@ -1857,7 +1861,7 @@ STEK:
 		Prerequisites: afldorweap, dome, ~structures.soviet, ~techlevel.high
 		Description: Provides Soviet advanced technologies.
 	Valued:
-		Cost: 1500
+		Cost: 2000
 	Tooltip:
 		Name: Soviet Tech Center
 	ProvidesPrerequisite:
