--- a/mods/sovra/rules/ships.yaml
+++ b/mods/sovra/rules/ships.yaml
@@ -267,7 +267,7 @@ LST:
 	RevealsShroud@GAPGEN:
 		Range: 5c0
 	WithLandingCraftAnimation:
-		OpenTerrainTypes: Clear, Rough, Road, Ore, Gems, Beach
+		OpenTerrainTypes: Clear, Rough, Road, Ore, Gems, Beach, WaterFord
 	Cargo:
 		Types: Infantry, Vehicle
 		MaxWeight: 5
