--- a/mods/sovra/rules/vehicles.yaml
+++ b/mods/sovra/rules/vehicles.yaml
@@ -588,7 +588,7 @@ MNLY:
 	Minelayer:
 		Mine: MINV
 		TileUnknownName: build-valid
-		TerrainTypes: Clear, Road, Beach, Ore, Gems, Rough, Bridge
+		TerrainTypes: Clear, Road, Beach, Ore, Gems, Rough, Bridge, WaterFord
 	MineImmune:
 	AmmoPool:
 		Ammo: 5
