--- a/mods/sovra/tilesets/desert.yaml
+++ b/mods/sovra/tilesets/desert.yaml
@@ -64,6 +64,10 @@ Terrain:
 		TargetTypes: Water
 		Color: 5DA5CE
 		RestrictPlayerColor: true
+	TerrainType@WaterFord:
+		Type: WaterFord
+		TargetTypes: Ground
+		Color: B09C78
 
 Templates:
 	Template@255:
@@ -2742,39 +2746,39 @@ Templates:
 			0: Rough
 			1: Road
 			2: Road
-			3: Beach
-			4: Beach
-			5: Beach
-			6: Beach
-			7: Beach
-			8: Beach
+			3: WaterFord
+			4: WaterFord
+			5: WaterFord
+			6: WaterFord
+			7: WaterFord
+			8: WaterFord
 	Template@601:
 		Id: 601
 		Images: f02.des
 		Size: 3,3
 		Categories: Bridge
 		Tiles:
-			0: Beach
-			1: Beach
-			2: Beach
-			3: Beach
-			4: Beach
-			5: Beach
-			6: Beach
-			7: Beach
-			8: Beach
+			0: WaterFord
+			1: WaterFord
+			2: WaterFord
+			3: WaterFord
+			4: WaterFord
+			5: WaterFord
+			6: WaterFord
+			7: WaterFord
+			8: WaterFord
 	Template@602:
 		Id: 602
 		Images: f03.des
 		Size: 3,3
 		Categories: Bridge
 		Tiles:
-			0: Beach
-			1: Beach
-			2: Beach
-			3: Beach
-			4: Beach
-			5: Beach
+			0: WaterFord
+			1: WaterFord
+			2: WaterFord
+			3: WaterFord
+			4: WaterFord
+			5: WaterFord
 			6: Clear
 			7: Road
 			8: Clear
@@ -2785,43 +2789,43 @@ Templates:
 		Categories: Bridge
 		Tiles:
 			0: Clear
-			1: Beach
-			2: Beach
+			1: WaterFord
+			2: WaterFord
 			3: Road
-			4: Beach
-			5: Beach
+			4: WaterFord
+			5: WaterFord
 			6: Clear
-			7: Beach
-			8: Beach
+			7: WaterFord
+			8: WaterFord
 	Template@604:
 		Id: 604
 		Images: f05.des
 		Size: 3,3
 		Categories: Bridge
 		Tiles:
-			0: Beach
-			1: Beach
-			2: Beach
-			3: Beach
-			4: Beach
-			5: Beach
-			6: Beach
-			7: Beach
-			8: Beach
+			0: WaterFord
+			1: WaterFord
+			2: WaterFord
+			3: WaterFord
+			4: WaterFord
+			5: WaterFord
+			6: WaterFord
+			7: WaterFord
+			8: WaterFord
 	Template@605:
 		Id: 605
 		Images: f06.des
 		Size: 3,3
 		Categories: Bridge
 		Tiles:
-			0: Beach
-			1: Beach
+			0: WaterFord
+			1: WaterFord
 			2: Clear
-			3: Beach
-			4: Beach
+			3: WaterFord
+			4: WaterFord
 			5: Road
-			6: Beach
-			7: Beach
+			6: WaterFord
+			7: WaterFord
 			8: Clear
 	Template@620:
 		Id: 620
