--- a/mods/sovra/rules/misc.yaml
+++ b/mods/sovra/rules/misc.yaml
@@ -6,6 +6,7 @@ MINV:
 			soviet: minp
 			russia: minp
 			ukraine: minp
+            belarus: minp
 	Explodes:
 		Weapon: ATMine
 
@@ -62,12 +63,12 @@ CRATE:
 	GiveUnitCrateAction@apc:
 		SelectionShares: 6
 		Units: apc
-		ValidFactions: soviet, russia, ukraine
-		Prerequisites: techlevel.low
+		ValidFactions: allies, england, france, germany, soviet, russia, ukraine, belarus
+		Prerequisites: techlevel.low, barracks
 	GiveUnitCrateAction@ftrk:
 		SelectionShares: 6
 		Units: ftrk
-		ValidFactions: soviet, russia, ukraine
+		ValidFactions: soviet, russia, ukraine, belarus
 		Prerequisites: techlevel.low
 	GiveUnitCrateAction@arty:
 		SelectionShares: 5
@@ -77,7 +78,7 @@ CRATE:
 	GiveUnitCrateAction@v2rl:
 		SelectionShares: 5
 		Units: v2rl
-		ValidFactions: soviet, russia, ukraine
+		ValidFactions: soviet, russia, ukraine, belarus
 		Prerequisites: techlevel.medium, dome
 	GiveUnitCrateAction@2tnk:
 		SelectionShares: 4
@@ -87,12 +88,12 @@ CRATE:
 	GiveUnitCrateAction@3tnk:
 		SelectionShares: 4
 		Units: 3tnk
-		ValidFactions: soviet, russia, ukraine
+		ValidFactions: soviet, russia, ukraine, belarus
 		Prerequisites: techlevel.medium, fix
 	GiveUnitCrateAction@squadlight:
 		SelectionShares: 10
 		Units: e1,e1,e1,e3,e3
-		ValidFactions: allies, england, france, germany, soviet, russia, ukraine
+		ValidFactions: allies, england, france, germany, soviet, russia, ukraine, belarus
 	GiveUnitCrateAction@squadheavyallies:
 		SelectionShares: 7
 		Units: e1,e1,e1,e1,e3,e3,e3,e6,medi
@@ -101,7 +102,7 @@ CRATE:
 	GiveUnitCrateAction@squadheavysoviet:
 		SelectionShares: 7
 		Units: e1,e1,e4,e4,e3,e3,e3,e6
-		ValidFactions: soviet, russia, ukraine
+		ValidFactions: soviet, russia, ukraine, belarus
 		TimeDelay: 4500
 	GrantExternalConditionCrateAction@invuln:
 		SelectionShares: 5
@@ -112,27 +113,27 @@ CRATE:
 	GiveUnitCrateAction@lst:
 		SelectionShares: 6
 		Units: lst
-		ValidFactions: allies, england, france, germany, soviet, russia, ukraine
+		ValidFactions: allies, england, france, germany, soviet, russia, ukraine, belarus
 		Prerequisites: techlevel.low
 	GiveUnitCrateAction@pt:
 		SelectionShares: 6
 		Units: pt
 		ValidFactions: allies, england, france, germany
 		Prerequisites: techlevel.low
-	GiveUnitCrateAction@ss:
+	GiveUnitCrateAction@seas:
 		SelectionShares: 4
-		Units: ss
-		ValidFactions: soviet, russia, ukraine
+		Units: seas
+		ValidFactions: soviet, russia, ukraine, belarus
 		Prerequisites: techlevel.low
 	GiveUnitCrateAction@dd:
 		SelectionShares: 4
 		Units: dd
 		ValidFactions: allies, england, france, germany
 		Prerequisites: techlevel.medium, dome
-	GiveUnitCrateAction@ss2:
+	GiveUnitCrateAction@ss:
 		SelectionShares: 4
 		Units: ss
-		ValidFactions: soviet, russia, ukraine
+		ValidFactions: soviet, russia, ukraine, belarus
 		Prerequisites: techlevel.medium, dome
 	GiveUnitCrateAction@ca:
 		SelectionShares: 3
@@ -142,9 +143,8 @@ CRATE:
 	GiveUnitCrateAction@msub:
 		SelectionShares: 3
 		Units: msub
-		ValidFactions: soviet, russia, ukraine
+		ValidFactions: soviet, russia, ukraine, belarus
 		Prerequisites: techlevel.high, stek
-
 
 MONEYCRATE:
 	Inherits: ^Crate
