--- a/mods/sovra/mod.yaml
+++ b/mods/sovra/mod.yaml
@@ -1,6 +1,6 @@
 Metadata:
 	Title: Red Alert Soviet
-	Version: release-20231010
+	Version: sovra-20231010
 	Website: https://www.openra.net
 	WebIcon32: https://www.openra.net/images/icons/ra_32x32.png
 	WindowTitle: OpenRA - Red Alert Soviet
