--- a/mods/sovra/rules/vehicles.yaml
+++ b/mods/sovra/rules/vehicles.yaml
@@ -639,6 +639,7 @@ TRUK:
 
 MGG:
 	Inherits: ^Vehicle
+	Inherits@IDISABLE: ^DisableOnPowerDown
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 330
@@ -659,6 +660,7 @@ MGG:
 	WithIdleOverlay@SPINNER:
 		Offset: -299,0,171
 		Sequence: spinner
+		PauseOnCondition: disabled
 	RevealsShroud:
 		MinRange: 4c0
 		Range: 6c0
@@ -667,7 +669,10 @@ MGG:
 		Range: 4c0
 	CreatesShroud:
 		Range: 6c0
+		RequiresCondition: !disabled
 	RenderShroudCircle:
+	Power:
+		Amount: -10
 	SpawnActorOnDeath:
 		Actor: MGG.Husk
 
