--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -646,7 +646,7 @@ TSLA:
 		Amount: -100
 	DetectCloaked:
 		Range: 6c0
-		RequiresCondition: !disabled
+        RequiresCondition: !lowpower && !disabled
 	ProvidesPrerequisite@buildingname:
 
 AGUN:
@@ -923,6 +923,10 @@ GUN:
 		Amount: -40
 	DetectCloaked:
 		Range: 6c0
+        RequiresCondition: !lowpower
+	GrantConditionOnPowerState@LOWPOWER:
+		Condition: lowpower
+		ValidPowerStates: Low, Critical
 	-BodyOrientation:
 	ClassicFacingBodyOrientation:
 
@@ -966,6 +970,10 @@ FTUR:
 		Amount: -20
 	DetectCloaked:
 		Range: 6c0
+        RequiresCondition: !lowpower
+	GrantConditionOnPowerState@LOWPOWER:
+		Condition: lowpower
+		ValidPowerStates: Low, Critical
 	ProvidesPrerequisite@buildingname:
 	Explodes:
 		Weapon: BuildingExplode
